screen.css
/* Reset */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}

body {
	line-height: 1;
}

ol, ul {
	list-style: none;
}

blockquote, q {
	quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* End Reset */

html {
    font-family: audioWide, sans-serif;
    font-size: 12px;
}

a {
    text-decoration: none;
    color: black;
}

@font-face {
    font-family: audioWide;
    src: url(https://fonts.googleapis.com/css?family=Audiowide);
}

.container {
    display: flex;
    width: 100%;
    height: 105vh;
    justify-content: center;
    background: center / cover url("images/texture2.jpg");
}

.resume-container {
    display: flex;
    overflow-y: scroll;
    overflow-x: hidden;
    margin: top 1rem;
    flex-direction: column;
    width: 70%;
    height: 100%;
    background: white;
    border: 2px solid black;
}

.resume-header {
    display: flex;
    position: sticky;
    background-color: black;
    color: white;
    top: 0;
    flex-direction: column;
    border-bottom: 2px solid black;
}

.name {
    order: 1;
    text-align: center;
    width: 90%;
    padding-top: 10px;
    font-size: 7vw;
    font-weight: bolder;
}

.contact-info {
    order: 2;
    display: flex;
    justify-content: center;
    text-align: center;
    width: 100%;
    font-size: 1.5vw;
    font-weight: bold;
    align-self: flex-end;
}

.contacts {
    width: 100%;
}
.contacts a {
    color: white;
    text-decoration: none;
}

a:hover {
    color: #ffcc00;
}
.contacts li {
    padding: 0 1.3vw 0;
    justify-self: center;
    list-style-type: none;
    display: inline;
}

.title {
    width: 100%;
    font-size: 3vw;
    font-weight: bold;
    margin: 1.5vw 1vw 0;
    
}

.objective-text {
    padding-left: 1vw;
    margin-top: 1vw;
    font-size: 1.5rem;
}

.bar {
    width: 100%;
    height: 1px;
    border-top: 2px solid black;
}

.education-items {
    display: grid;
    font-size: 1.3rem;
    grid-template-columns: 50% 50%;
    width: 100%;
    margin: 1vw 0 0;
}

.top {
    padding-bottom: .4vw;
    font-weight: bold;
}

.bottom {
    font-style: italic;
    font-size: .9rem;
}


.city, .dates {
    text-align: right;
}

.right{
    margin-right: 1vw;
}

.left {
    margin-left: 1vw;

}

.skill-items .group {
    font-weight: bolder;
    font-size: 1.6rem;
}

.skills {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin: .7vw 0 0;
}

.skill-items {
    padding: 1vw 1vw 0;
    font-size: 1.4rem;
}

.skill-items .item {
    padding: 1vw 0 0;
}

.project-items {
    display: flex;
    flex-direction: column;
    width: 100%;
    padding: 1vw 1vw 0;
}

.project-items .item {
    font-size: 1.7rem;
    padding-bottom: 2vh;
}

.tools {
    font-size: 1rem;
    font-style: italic;
}

.description-items {
    list-style-type: square;
    list-style-position: inside;
    margin-left: 1vw;
    margin-right: 1vw;
}

.detail {
    font-size: 1.2rem;
    
}

.project-items {
    display: flex;
    flex-direction: column;
    width: 100%;
    padding: 1vw 1vw 0;
}

.work {
    width: 100%;
}

